Added main DTApp class for controlling the application. Added basic DTGraphics class for handling DirectX 11 stuff . Added simple Timer class.

--- a/DoomTask/DoomTask/DoomTask.vcxproj
+++ b/DoomTask/DoomTask/DoomTask.vcxproj
@@ -139,18 +139,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DTApp.cpp" />
     <ClCompile Include="DTException.cpp" />
+    <ClCompile Include="DTGraphics.cpp" />
     <ClCompile Include="DTWindow.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DTApp.h" />
     <ClInclude Include="DTException.h" />
+    <ClInclude Include="DTGraphics.h" />
     <ClInclude Include="DTWindow.h" />
     <ClInclude Include="DTWnds.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
