--- a/DoomTask/DoomTask/DoomTask.vcxproj.filters
+++ b/DoomTask/DoomTask/DoomTask.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="DTGraphics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dxerr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DXGIInfoManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DTWnds.h">
@@ -64,6 +70,15 @@
     </ClInclude>
     <ClInclude Include="DTGraphics.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dxerr.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DXGIInfoManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DTThrowMacros.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
