--- a/DoomTask/DoomTask/DoomTask.vcxproj
+++ b/DoomTask/DoomTask/DoomTask.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="DxgiInfoManager.cpp" />
     <ClCompile Include="IndexedTriangleList.h" />
     <ClCompile Include="Keyboard.cpp" />
+    <ClCompile Include="LPointLight.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="DTRenderObjectBase.cpp" />
     <ClCompile Include="RBox.cpp" />
@@ -206,6 +207,7 @@
     <ClInclude Include="dxerr.h" />
     <ClInclude Include="DxgiInfoManager.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="LPointLight.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="DTRenderObjectBase.h" />
     <ClInclude Include="Plane.h" />
