--- a/DoomTask/DoomTask/DoomTask.vcxproj.filters
+++ b/DoomTask/DoomTask/DoomTask.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="LPointLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DTCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DTWnds.h">
@@ -215,6 +218,12 @@
     <ClInclude Include="LPointLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DTCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DTMath.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="SimpleVertexShader.hlsl">
@@ -233,6 +242,9 @@
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="SimplePhongPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="PhongPS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
