--- a/DoomTask/DoomTask/DoomTask.vcxproj
+++ b/DoomTask/DoomTask/DoomTask.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="BTransform.cpp" />
     <ClCompile Include="BVertexBuffer.cpp" />
     <ClCompile Include="BVertexShader.cpp" />
+    <ClCompile Include="DepthStencilTexture.cpp" />
     <ClCompile Include="DTApp.cpp" />
     <ClCompile Include="DTBindObjectBase.cpp" />
     <ClCompile Include="DTCamera.cpp" />
@@ -180,6 +181,7 @@
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="DTRenderObjectBase.cpp" />
     <ClCompile Include="RBox.cpp" />
+    <ClCompile Include="RenderTargetTexture.cpp" />
     <ClCompile Include="RMesh.cpp" />
     <ClCompile Include="RTexPlane.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -198,6 +200,7 @@
     <ClInclude Include="BVertexBuffer.h" />
     <ClInclude Include="BVertexShader.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="DepthStencilTexture.h" />
     <ClInclude Include="DTApp.h" />
     <ClInclude Include="DTBindObjectBase.h" />
     <ClInclude Include="DTCamera.h" />
@@ -217,6 +220,7 @@
     <ClInclude Include="DTRenderObjectBase.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="RBox.h" />
+    <ClInclude Include="RenderTargetTexture.h" />
     <ClInclude Include="RMesh.h" />
     <ClInclude Include="RTexPlane.h" />
     <ClInclude Include="stb_image.h" />
