Added tools and classes for creating post-processing effects and post-processing chains. Created a simple grayscale filter.

--- a/DoomTask/DoomTask/DoomTask.vcxproj
+++ b/DoomTask/DoomTask/DoomTask.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="BInputLayout.cpp" />
     <ClCompile Include="BMaterial.cpp" />
     <ClCompile Include="BPixelShader.cpp" />
+    <ClCompile Include="PostProcessPass.cpp" />
     <ClCompile Include="BSampler.cpp" />
     <ClCompile Include="BTexture.cpp" />
     <ClCompile Include="BTopology.cpp" />
@@ -193,6 +194,7 @@
     <ClInclude Include="BInputLayout.h" />
     <ClInclude Include="BMaterial.h" />
     <ClInclude Include="BPixelShader.h" />
+    <ClInclude Include="PostProcessPass.h" />
     <ClInclude Include="BSampler.h" />
     <ClInclude Include="BTexture.h" />
     <ClInclude Include="BTopology.h" />
@@ -228,6 +230,22 @@
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="DefaultPostProcessVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
+    <FxCompile Include="GrayscalePS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
     <FxCompile Include="PhongPS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
