--- a/DoomTask/DoomTask/DoomTask.vcxproj
+++ b/DoomTask/DoomTask/DoomTask.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="RBox.cpp" />
     <ClCompile Include="RenderTargetTexture.cpp" />
     <ClCompile Include="RMesh.cpp" />
+    <ClCompile Include="RMultiMesh.cpp" />
     <ClCompile Include="RTexPlane.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="WinMain.cpp" />
@@ -224,6 +225,7 @@
     <ClInclude Include="RBox.h" />
     <ClInclude Include="RenderTargetTexture.h" />
     <ClInclude Include="RMesh.h" />
+    <ClInclude Include="RMultiMesh.h" />
     <ClInclude Include="RTexPlane.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Timer.h" />
