--- a/DoomTask/DoomTask/DoomTask.vcxproj.filters
+++ b/DoomTask/DoomTask/DoomTask.vcxproj.filters
@@ -292,7 +292,7 @@
     <FxCompile Include="DefaultPostProcessVS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="GrayscalePS.hlsl">
+    <FxCompile Include="OldSchoolPS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="PhongVS.hlsl">
@@ -305,6 +305,12 @@
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="DefferedFinalPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="TestingHS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="TestingDS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
