--- a/DoomTask/DoomTask/DoomTask.vcxproj
+++ b/DoomTask/DoomTask/DoomTask.vcxproj
@@ -155,10 +155,13 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BDomainShader.cpp" />
+    <ClCompile Include="BHullShader.cpp" />
     <ClCompile Include="BIndexBuffer.cpp" />
     <ClCompile Include="BInputLayout.cpp" />
     <ClCompile Include="BMaterial.cpp" />
     <ClCompile Include="BPixelShader.cpp" />
+    <ClCompile Include="DTRenderQueue.cpp" />
     <ClCompile Include="GBuffer.cpp" />
     <ClCompile Include="LLightGroup.cpp" />
     <ClCompile Include="PostProcessPass.cpp" />
@@ -193,10 +196,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BConstantBuffer.h" />
+    <ClInclude Include="BDomainShader.h" />
+    <ClInclude Include="BHullShader.h" />
     <ClInclude Include="BIndexBuffer.h" />
     <ClInclude Include="BInputLayout.h" />
     <ClInclude Include="BMaterial.h" />
     <ClInclude Include="BPixelShader.h" />
+    <ClInclude Include="DTRenderQueue.h" />
     <ClInclude Include="GBuffer.h" />
     <ClInclude Include="LLightGroup.h" />
     <ClInclude Include="PostProcessPass.h" />
@@ -341,6 +347,8 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Domain</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
     </FxCompile>
     <FxCompile Include="TestingHS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Hull</ShaderType>
@@ -351,6 +359,8 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Hull</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
     </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
